--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="resume.html">Resume</a></li>
             </ul>
         </nav>
+        <button id="hackerModeToggle">Activate Hacker Mode</button>
     </header>
     
     <section id="home">
@@ -28,5 +29,7 @@
     <footer>
         <p>&copy; 2025 Mazin Salah. All rights reserved.</p>
     </footer>
+    
+    <script src="script.js"></script>
 </body>
 </html>
