Added script.js footer

--- a/projects.html
+++ b/projects.html
@@ -33,5 +33,7 @@
     <footer>
         <p>&copy; 2025 Mazin Salah. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
