--- a/resume.html
+++ b/resume.html
@@ -29,5 +29,7 @@
     <footer>
         <p>&copy; 2025 Mazin Salah. All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
