--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
     
     <section id="home">
         <h2>Welcome</h2>
-        <p>I'm a Computer Science student at NC State University with a strong interest in software development, security, and AI-driven applications.</p>
+        <p>Hello! My name is <strong>Mazin Salah</strong>, and I’m a <strong>Computer Science student at NC State University (May 2026)</strong> with a passion for <strong>software development, security, and AI</strong>.</p>
+        <p>Starting from near zero, I’ve built a strong foundation in <strong>coding, problem-solving, and software engineering principles</strong>. My journey at NC State has been one of <strong>constant learning, collaboration, and growth</strong>. From my first lines of code to working on <strong>real-world projects, security research, and AI-driven applications</strong>, I’ve gained hands-on experience that has shaped me into a <strong>versatile and adaptive developer</strong>.</p>
+        <p>Throughout my career, I’ve had the opportunity to:</p>
+        <ul>
+            <li><strong>Develop projects</strong> that solve real problems using <strong>C, Java, Python, and JavaScript</strong>.</li>
+            <li><strong>Explore cybersecurity & ethical hacking</strong>, working with <strong>penetration testing tools & vulnerability analysis</strong>.</li>
+            <li><strong>Connect with professionals</strong> in tech, gaining valuable insights on <strong>career development, software engineering, and research</strong>.</li>
+        </ul>
+        <p>I’m always looking for <strong>new challenges</strong> to refine my skills and contribute to <strong>impactful projects</strong>. Whether it’s <strong>AI-driven applications, security research, or full-stack development</strong>, I strive to create <strong>efficient, scalable, and innovative solutions</strong>.</p>
+        <p>Feel free to explore my <a href="projects.html">Projects</a> and <a href="resume.html">Resume</a> to learn more about my work.</p>
     </section>
+   
     
     <footer>
         <p>&copy; 2025 Mazin Salah. All rights reserved.</p>
