--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="resume.html">Resume</a></li>
+                <li><a href="experience.html">Experience</a></li>
             </ul>
         </nav>
         <button id="hackerModeToggle">Activate Hacker Mode</button>
@@ -24,17 +24,17 @@
     <section id="home">
         <h2>Welcome</h2>
         <p>Hello! My name is <strong>Mazin Salah</strong>, and I’m a <strong>Computer Science student at NC State University (May 2026)</strong> with a passion for <strong>software development, security, and AI</strong>.</p>
-        <p>Starting from near zero, I’ve built a strong foundation in <strong>coding, problem-solving, and software engineering principles</strong>. My journey at NC State has been one of <strong>constant learning, collaboration, and growth</strong>. From my first lines of code to working on <strong>real-world projects, security research, and AI-driven applications</strong>, I’ve gained hands-on experience that has shaped me into a <strong>versatile and adaptive developer</strong>.</p>
-        <p>Throughout my career, I’ve had the opportunity to:</p>
-        <ul>
-            <li><strong>Develop projects</strong> that solve real problems using <strong>C, Java, Python, and JavaScript</strong>.</li>
-            <li><strong>Explore cybersecurity & ethical hacking</strong>, working with <strong>penetration testing tools & vulnerability analysis</strong>.</li>
-            <li><strong>Connect with professionals</strong> in tech, gaining valuable insights on <strong>career development, software engineering, and research</strong>.</li>
-        </ul>
-        <p>I’m always looking for <strong>new challenges</strong> to refine my skills and contribute to <strong>impactful projects</strong>. Whether it’s <strong>AI-driven applications, security research, or full-stack development</strong>, I strive to create <strong>efficient, scalable, and innovative solutions</strong>.</p>
-        <p>Feel free to explore my <a href="projects.html">Projects</a> and <a href="resume.html">Resume</a> to learn more about my work.</p>
+        <p>I began my journey with little experience and have since built a strong foundation in <strong>coding, problem-solving, and software engineering principles</strong>. My time at NC State has been one of <strong>continuous learning, collaboration, and growth</strong>, allowing me to gain <strong>hands-on experience and research</strong> that have shaped me into a <strong>versatile and adaptive developer</strong>.</p>
+        <p>I have developed and contributed to projects using <strong>C, Java, HTML, JavaScript, and more</strong>, applying <strong>problem-solving techniques</strong> to build <strong>efficient solutions</strong>. Additionally, I have conducted <strong>research and hacking exercises</strong>, utilizing <strong>penetration testing tools and vulnerability analysis</strong> to <strong>identify and mitigate security threats</strong>.</p>
+        <p>Beyond technical skills, I actively <strong>network with industry professionals</strong> to gain insights into <strong>career development, software engineering best practices, and research advancements</strong>. I am always seeking opportunities to <strong>refine my skills and contribute to impactful projects</strong>, whether through <strong>AI-driven applications, research, or full-stack development</strong>.</p>
+        <p>Check out my <a href="projects.html">Projects</a> and <a href="experience.html">Experience</a> to see my latest work, and feel free to reach out!</p>
     </section>
-   
+    
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email: <a href="mailto:mbsalah@ncsu.edu">mabsalah@ncsu.edu</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/mazin-salah" target="_blank">linkedin.com/in/mazin-salah</a></p>
+    </section>
     
     <footer>
         <p>&copy; 2025 Mazin Salah. All rights reserved.</p>
