--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:mbsalah@ncsu.edu">mabsalah@ncsu.edu</a></p>
+        <p>Email: <a href="mailto:mbsalah@ncsu.edu">mbsalah@ncsu.edu</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/mazin-salah" target="_blank">linkedin.com/in/mazin-salah</a></p>
     </section>
     
