Added buttons to about me and removed hover effect

--- a/about.html
+++ b/about.html
@@ -28,8 +28,10 @@
     <section id="contact">
         <h2>Get in Touch</h2>
         <p>I'm open to making new connections and helping others out. Feel free to reach out via email or LinkedIn.</p>
-        <a href="mailto:mbsalah@ncsu.edu" class="button">Email Me</a>
-        <a href="https://www.linkedin.com/in/mazin-salah" class="button">Connect on LinkedIn</a>
+        <div class="contact-buttons">
+            <a href="mailto:mbsalah@ncsu.edu" class="button">Email Me</a>
+            <a href="https://www.linkedin.com/in/mazin-salah" class="button">Connect on LinkedIn</a>
+        </div>
     </section>
     
     <footer>
