Made linkedIn button open a new page

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         <p>I'm open to making new connections and helping others out. Feel free to reach out via email or LinkedIn.</p>
         <div class="contact-buttons">
             <a href="mailto:mbsalah@ncsu.edu" class="button">Email Me</a>
-            <a href="https://www.linkedin.com/in/mazin-salah" class="button">Connect on LinkedIn</a>
+            <a href="https://www.linkedin.com/in/mazin-salah" class="button" target="_blank" rel="noopener noreferrer">Connect on LinkedIn</a>
         </div>
     </section>
     
