Now using gmail and not outlook

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <h2>Get in Touch</h2>
         <p>I'm open to making new connections and helping others out. Feel free to reach out via email or LinkedIn.</p>
         <div class="contact-buttons">
-            <a href="mailto:mbsalah@ncsu.edu" class="button">Email Me</a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=mbsalah@ncsu.edu" class="button" target="_blank" rel="noopener noreferrer">Email Me</a>
             <a href="https://www.linkedin.com/in/mazin-salah" class="button" target="_blank" rel="noopener noreferrer">Connect on LinkedIn</a>
         </div>
     </section>
