Adding new resume

--- a/experience.html
+++ b/experience.html
@@ -24,7 +24,7 @@
     <section>
         <h2>📄 Download Resume</h2>
         <p>You can download my resume here:</p>
-        <a href="Mazin_Salah_Resume.pdf" download class="button">Download Resume</a>
+        <a href="Mazin Salah's Resume.pdf" target="_blank" rel="noopener noreferrer" class="button">Download Resume</a>
     </section>
     
     <section>
